--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <h5><i class="fas fa-map-marker-alt text-primary me-2"></i>Location</h5>
                         <p>
                             Dr. Sharath Homeopathy<br>
-                            Mukkambath Rd, Aroor gram panchayat,<br>
+                            Aroor-Arookutty Brg, Aroor gram panchayat,<br>
                             Kochi, Kerala 688534
                         </p>
                         <h5><i class="fas fa-phone text-primary me-2"></i>Phone</h5>
@@ -118,7 +118,7 @@
                         <h5><i class="fas fa-map-marker-alt text-primary me-2"></i>Our Location</h5>
                         <div class="ratio ratio-16x9">
                             <iframe 
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.7736790120275!2d76.30849597484394!3d9.869345690229519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b08719937023091%3A0x1dc1b214260c660f!2sMukkambath%20Rd%2C%20Aroor%20gram%20panchayat%2C%20Kochi%2C%20Kerala%20688534!5e0!3m2!1sen!2sin!4v1738414873996!5m2!1sen!2sin"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.77836593671!2d76.31113719999999!3d9.868953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0871511242b30d%3A0xf6a9e17f7ca3ab6c!2sDr.%20Sharath&#39;s%20Homoeopathy%20Clinic!5e0!3m2!1sen!2sin!4v1738419857617!5m2!1sen!2sin"
                                 width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
                             </iframe>
                         </div>
